Falta Agregar Personas

--- a/CRUD/src/app/components/persona/persona.component.html
+++ b/CRUD/src/app/components/persona/persona.component.html
@@ -8,5 +8,5 @@
     <p>Edad: {{persona.edad}}</p>
     <button class="btn btn-primary mb-3" (click)="festejo(persona)">Cumplir Años</button>
     <button class="btn btn-primary mb-3" (click)="desfestejo(persona)">Reducir Años</button>
+    <button class="btn btn-danger mb-3" (click)="borrarPersona(persona)">Eliminar Persona</button>
 </div>
-    
